<resources>
    <string name="app_name">pronounce.it</string>
    <string name="pronounce_it">Pronounce.it</string>
    <string name="get_started">Get Started</string>
    <string name="select_language">Select Language</string>
    <string name="spanish">Spanish</string>
    <string name="let_s_learn">Let\'s Learn!</string>
    <string name="lesson_1">Lesson 1</string>
    <string name="return_to_home_page">Return to Home Page</string>
    <string name="lesson_01">Lesson 01</string>
    <string name="listen">Listen</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="exit">EXIT</string>
    <string name="lesson_2">LESSON 2</string>
    <string name="lesson_02">Lesson 02</string>
    <string name="submit">Submit</string>
    <string name="lesson_2title">Lesson 2</string>
</resources>
